Save Dialog buttons are no longer clipping with each other

--- a/client/src/app/components/dialogs/save-dialog/save-dialog.component.scss
+++ b/client/src/app/components/dialogs/save-dialog/save-dialog.component.scss
@@ -8,7 +8,6 @@
 
 .bottom-div {
     justify-content: center;
-    position: absolute;
     bottom: 0;
 }
 
@@ -54,6 +53,6 @@ button:hover {
     }
 }
 
-.rule-header{
+.rule-header {
     font-size: 16px;
 }
